* Added 'play' 'pause' and 'music' commands
* The 'mail' command allows deleting specific mail messages
* Fixed a bug in d2 statstring parsing (acts completed)
* Refactored BNLS code to improve connection management
* Added "new day" separator to GuiEventHandler (Issue 113)
* Unbroke botnet with a super hacky non permanent patch
* Added BNLS_WARDEN, and some hacky stuff to make it work

2.1.1 (r1848) 2009-07-08:
* Enabled hot-swapping plugins (may require re-configuring enabled plugins) (Issue 103)
* The database editor will prompt before discarding unsaved changes
* Added graphical flagSpoof editor to the database editor
* Fixed bug causing expireDays=0 to mean expire immediately
* Increased the BNLS timeout to 15 seconds
* Added an exception tracker (Issue 91)
* Fixed a bug with MCP server login
* The capture for "?trigger" is no longer case-sensitive
* Fixed a bug relating to dates in the DatabaseEditor
* Added SOCKS4/4a support
* Handle SID_CHATEVENT EID_BROADCAST
* Added lag icons to HTMLOutputEventHandler
* Improved the MirrorSelector
* Improved handling of offline-commands
* Improved BNLS_VERSIONCHECKEX2 timeout behavior
* Reduced schema upgrade verbosity for harmless MergerTokens
* New windows are centered on the screen
* Added a connection configuration wizard
* SID_WARDEN error message has a link to Warden FAQ
* Fixed a race condition that could deadlock when greetings are sent
* Console plugin now supports color
* Inactive accounts are set to zero access instead of being deleted
* Added color scheme from Invigoration
* Added 'promote' and 'demote' commands
* Press the up and down keys to cycle through chat history
* The bot will warn users about alias deletion when 80% of expireDays has passed
* H2 is now the default database engine

2.1.0 (r1640) 2008-10-06:
* Added BotNet account login
* CDKeys are now dumped to cdkeys.processed.txt in a well-formatted way
* Added /accept and /decline for W3 clan management
* Added a simple clan creation utility