@@ -8,6 +8,7 @@
 * Added "new day" separator to GuiEventHandler (Issue 113)
 * Unbroke botnet with a super hacky non permanent patch
 * Added BNLS_WARDEN, and some hacky stuff to make it work
+* Use user's preferred timezone for logging in HTMLOutputEventHandler
 
 2.1.1 (r1848) 2009-07-08:
 * Enabled hot-swapping plugins (may require re-configuring enabled plugins) (Issue 103)
